add status api and change return type for solution
